--- a/templates/customer/new.html.twig
+++ b/templates/customer/new.html.twig
@@ -5,7 +5,8 @@
     <h1>Nuevo Cliente</h1>
 </div>
 
-<form class="well span6" action="{{ path('customer_new') }}" method="post" enctype="multipart/form-data">	<fieldset>
+<form class="well span6" action="{{ path('customer_new') }}" method="post" enctype="multipart/form-data">
+	<fieldset>
 		<div class="row">
 			<div class="span3">
 				<label for="name">Nombre</label>
