--- a/templates/car/list.html.twig
+++ b/templates/car/list.html.twig
@@ -2,15 +2,15 @@
 
 {% block body %}
 <div class="page-header">
-    <h1>Clientes</h1>
+    <h1>Autos</h1>
 </div>
 
 <table class="records_list table table-striped table-bordered table-hover">
     <thead>
         <tr>
             <th>Id</th>
-            <th>Nombre</th>
-            <th>Teléfono</th>
+            <th>Marca / Modelo</th>
+            <th>Dueño</th>
             <th>Creado</th>
             <th>Acciones</th>
         </tr>
@@ -18,20 +18,20 @@
     <tbody>
     {% for entity in entities %}
         <tr>
-            <td><a href="{{ path('customer_show', { 'customerId': entity.id }) }}">{{ entity.id }}</a></td>
-            <td>{{ entity.firstname }} {{ entity.lastname }}</td>
-            <td>{{ entity.phonenumber }}</td>
+            <td><a href="{{ path('car_show', { 'carId': entity.id }) }}">{{ entity.id }}</a></td>
+            <td>{{ entity.make }} {{ entity.model }}</td>
+            <td><a href="#">{{ entity.customer_firstname }} {{ entity.customer_lastname }}</a></td>
             <td>{% if entity.created %}{{ entity.created|date('d-m-Y') }}{% endif %}</td>
             <td>
                 <ul>
                     <li>
-                        <a href="{{ path('customer_show', { 'customerId': entity.id }) }}">ver</a>
+                        <a href="{{ path('car_show', { 'carId': entity.id }) }}">ver</a>
                     </li>
                     <li>
-                        <a href="{{ path('customer_edit', { 'customerId': entity.id }) }}">editar</a>
+                        <a href="{{ path('car_edit', { 'carId': entity.id }) }}">editar</a>
                     </li>
                     <li>
-                        <a href="{{ path('customer_del', { 'customerId': entity.id }) }}">eliminar</a>
+                        <a href="{{ path('car_del', { 'carId': entity.id }) }}">eliminar</a>
                     </li>
                 </ul>
             </td>
@@ -47,5 +47,4 @@
   </ul>
 </div>
 
-<a href="{{ path('customer_new') }}" class="btn btn-primary ">Crear nuevo cliente</a>
 {% endblock %}
