--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -39,8 +39,8 @@
                                 <li class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Taller <b class="caret"></b></a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="">Listado</a></li>
-                                        <li><a href="">Nuevo</a></li>
+                                        <li><a href="{{ path('workshop_list') }}">Listado</a></li>
+                                        <li><a href="{{ path('workshop_new') }}">Nueva entrada</a></li>
                                     </ul>
                                 </li>
                             </ul>
